--- a/Atlas/app/equipes/Equipe3/app/style.css
+++ b/Atlas/app/equipes/Equipe3/app/style.css
@@ -51,3 +51,63 @@ body {
     padding: 0; /* Supprime les rembourrages par défaut du h1 */
 }
 
+
+.legend-container {
+    position: absolute;
+    top: 40%;
+    left: 70%;
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    font-family: sans-serif;
+    z-index: 10;
+    text-align: left;
+}
+
+.legend-title {
+    font-weight: bold;
+    margin-bottom: 8px;
+    color: #002D62;
+    text-align: center;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    padding: 1px 0;
+}
+
+.legend-item:hover {
+    background-color: #f0f0f0;
+}
+
+.legend-circle {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: var(--color);
+    margin-right: 10px;
+}
+
+#button_url {
+    background-color: white;
+    border: 2px solid blue;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  #button_url a {
+    color: blue;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+  }
+
+  #button_url:hover {
+    background-color: #f0f8ff;
+  }
+
+ 
