--- a/Atlas/app/app.css
+++ b/Atlas/app/app.css
@@ -51,3 +51,21 @@ body {
     padding: 10px;
     margin-bottom: 10px;
 }
+
+@keyframes popup-pop {
+    0% {
+      transform: scale(0.5);
+      opacity: 0;
+    }
+    80% {
+      transform: scale(1.05);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+  .popup-content {
+    animation: popup-pop 0.4s ease forwards;
+  }
